# pkl-python

./: README.md  pyproject.toml
pkl-python/evalutor/: decoder_exec.py  evaluator.py  evaluator_exec.py  evaluator_manager.py  evaluator_options.py  module_source.py  project.py  reader.py
pkl-python/types/: incoming.py  outgoing.py  pkl.py
pkl_python/evaluator/: decoder.py  evaluator.py  evaluator_exec.py  evaluator_manager.py  evaluator_options.py  preconfigured_options.py  project.py  reader.py
pkl_python/types/: codes.py  evaluator.py  evaluator_manager.py  incoming.py  outgoing.py  pkl.py  project.py
tests/: test_evaluator.py
